[project]
name = "db-cleaner"
version = "0.1.0"
description = "DB cleaner script"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.13"
dependencies = [
    "editdistance>=0.8.1",
    "psycopg[binary]>=3.2.3",
]

[tool.ruff]
lint.select = ["B", "D", "E", "F", "G", "I", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RUF", "S", "TRY", "W"]
lint.ignore = ["D203", "D213"]
target-version = "py313"
